--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,7 @@
                 <h1 class="h2">实时画面</h1>
                 <div class="btn-toolbar mb-2 mb-md-0">
                     <div class="btn-group mr-2">
-                        <button type="button" onclick="captureCanvas()" class="btn btn-sm btn-outline-secondary">
+                        <button type="button" onclick="saveFrame()" class="btn btn-sm btn-outline-secondary">
                             <span data-feather="camera"></span>
                             拍照
                         </button>
