直播没开始的时候，disable掉拍照按钮

--- a/web/index.html
+++ b/web/index.html
@@ -72,7 +72,8 @@
                 <h1 class="h2">实时画面</h1>
                 <div class="btn-toolbar mb-2 mb-md-0">
                     <div class="btn-group mr-2">
-                        <button type="button" onclick="saveFrame()" class="btn btn-sm btn-outline-secondary">
+                        <button id="saveButton" type="button" disabled="disabled" onclick="saveFrame()"
+                                class="btn btn-sm btn-outline-secondary">
                             <span data-feather="camera"></span>
                             拍照
                         </button>
