--- a/web/index.html
+++ b/web/index.html
@@ -33,7 +33,7 @@
 <body>
 
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3" href="#">HomeCam</a>
+    <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3">HomeCam</a>
     <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse"
             data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -46,19 +46,36 @@
             <div class="sidebar-sticky pt-3">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a class="nav-link active" href="#">
+                        <a id="liveTab" class="nav-link" onclick="tabClick('liveTab','live.html',()=>{
+                            // LiveStream
+                            canvas = document.getElementById('hcam-live');
+                            startLivestream();
+
+                            window.onresize = () => {
+                                draw('', '', null, true);
+                            };},()=>{socket.close();window.onresize = () => {
+                            }})">
                             <span data-feather="video"></span>
                             首页 <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a id="videoTab" class="nav-link" onclick="tabClick('videoTab','pvideo.html',()=>{
+
+
+                            window.onresize = () => {
+
+                            };})">
                             <span data-feather="hard-drive"></span>
                             录像管理
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a id="settingsTab" class="nav-link" onclick="tabClick('settingsTab','settings.html',()=>{
+
+                            window.onresize = () => {
+
+                            };})">
                             <span data-feather="settings"></span>
                             设置
                         </a>
@@ -67,25 +84,9 @@
             </div>
         </nav>
 
-        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
-            <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-                <h1 class="h2">实时画面</h1>
-                <div class="btn-toolbar mb-2 mb-md-0">
-                    <div class="btn-group mr-2">
-                        <button id="saveButton" type="button" disabled="disabled" onclick="saveFrame()"
-                                class="btn btn-sm btn-outline-secondary">
-                            <span data-feather="camera"></span>
-                            拍照
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <canvas id="hcam-live" style="margin: 0 auto; width: 85%;display: block;">
-                浏览器不支持canvas
-            </canvas>
-
+        <main id="main" role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
         </main>
+
     </div>
 </div>
 
