--- a/web/pvideo.html
+++ b/web/pvideo.html
@@ -1,1 +1,8 @@
-<p>video</p>
+<div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+    <h1 class="h2">回放</h1>
+</div>
+
+<div class="container">
+    <div id="videos" class="row">
+    </div>
+</div>
