--- a/web/index.html
+++ b/web/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>HomeCam By 刘子昂</title>
+    <title>HomeCam</title>
+    <meta name="description" content="">
+    <meta name="author" content="刘子昂">
+    <meta name="theme-color" content="#343a40">
+    <meta property="og:image" content="img/icon.png">
+    <link rel="shortcut icon" href="img/icon.png">
+    <link rel="manifest" href="homecam.webmanifest">
 
 
     <!-- Bootstrap core CSS -->
