UI问题修复与改进

--- a/web/app/index.html
+++ b/web/app/index.html
@@ -7,73 +7,73 @@
     <meta name="description" content="">
     <meta name="author" content="刘子昂">
     <meta name="theme-color" content="#343a40">
-    <meta property="og:image" content="img/icon.png">
+    <meta property="og:image" content="/img/icon.png">
 
     <meta name="mobile-web-app-capable" content="yes"/>
     <meta name="apple-touch-fullscreen" content="yes"/>
     <meta name="apple-mobile-web-app-title" content="Expo"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="apple-mobile-web-app-status-bar-style" content="default"/>
-    <link rel="shortcut icon" href="img/icon.png">
+    <link rel="shortcut icon" href="/img/icon.png">
     <link rel="manifest" href="homecam.webmanifest">
 
-    <link rel="apple-touch-icon" href="img/apple-icon-180.png">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-2048-2732.jpg"
+    <link rel="apple-touch-icon" href="/img/apple-icon-180.png">
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-2048-2732.jpg"
           media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-2732-2048.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-2732-2048.jpg"
           media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1668-2388.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1668-2388.jpg"
           media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-2388-1668.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-2388-1668.jpg"
           media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1536-2048.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1536-2048.jpg"
           media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-2048-1536.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-2048-1536.jpg"
           media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1668-2224.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1668-2224.jpg"
           media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-2224-1668.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-2224-1668.jpg"
           media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1620-2160.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1620-2160.jpg"
           media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-2160-1620.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-2160-1620.jpg"
           media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1284-2778.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1284-2778.jpg"
           media="(device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-2778-1284.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-2778-1284.jpg"
           media="(device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1170-2532.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1170-2532.jpg"
           media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-2532-1170.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-2532-1170.jpg"
           media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1125-2436.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1125-2436.jpg"
           media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-2436-1125.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-2436-1125.jpg"
           media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1242-2688.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1242-2688.jpg"
           media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-2688-1242.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-2688-1242.jpg"
           media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-828-1792.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-828-1792.jpg"
           media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1792-828.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1792-828.jpg"
           media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1242-2208.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1242-2208.jpg"
           media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-2208-1242.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-2208-1242.jpg"
           media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-750-1334.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-750-1334.jpg"
           media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1334-750.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1334-750.jpg"
           media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-640-1136.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-640-1136.jpg"
           media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="img/apple-splash-1136-640.jpg"
+    <link rel="apple-touch-startup-image" href="/img/apple-splash-1136-640.jpg"
           media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
 
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
         .bd-placeholder-img {
@@ -91,16 +91,13 @@
             }
         }
     </style>
-
-
-    <!-- Custom styles for this template -->
-    <link href="css/dashboard.css" rel="stylesheet">
 </head>
 <body>
 
 <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0 shadow">
     <a class="navbar-brand col-md-3 col-lg-2 mr-0 px-3">HomeCam</a>
-    <button class="navbar-toggler position-absolute d-md-none collapsed" type="button" data-toggle="collapse"
+    <button id="menu-button" class="navbar-toggler position-absolute d-md-none collapsed" type="button"
+            data-toggle="collapse"
             data-target="#sidebarMenu" aria-controls="sidebarMenu" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -112,7 +109,7 @@
             <div class="sidebar-sticky pt-3">
                 <ul class="nav flex-column">
                     <li class="nav-item">
-                        <a id="liveTab" class="nav-link" style="cursor: pointer" onclick="tabClick('liveTab','live.html',()=>{
+                        <a id="liveTab" class="nav-link" style="cursor: pointer" onclick="tabClick('liveTab','直播','live.html',()=>{
                             // LiveStream
                             canvas = document.getElementById('hcam-live');
                             startLivestream();
@@ -124,19 +121,19 @@
                             socket.close();window.onresize = () => {
                             }})">
                             <span data-feather="video"></span>
-                            首页 <span class="sr-only">(current)</span>
+                            直播 <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a id="videoTab" class="nav-link" style="cursor: pointer"
-                           onclick="tabClick('videoTab','pvideo.html',()=>{runVideoUI();},()=>{document.getElementById('main').innerHTML='';})">
+                           onclick="tabClick('videoTab','回放','pvideo.html',()=>{runVideoUI();},()=>{document.getElementById('main').innerHTML='';})">
                             <span data-feather="hard-drive"></span>
                             回放
                         </a>
                     </li>
                     <li class="nav-item">
                         <a id="settingsTab" class="nav-link" style="cursor: pointer"
-                           onclick="tabClick('settingsTab','settings.html',()=>{},()=>{document.getElementById('main').innerHTML='';})">
+                           onclick="tabClick('settingsTab','设置','settings.html',()=>{},()=>{document.getElementById('main').innerHTML='';})">
                             <span data-feather="settings"></span>
                             设置
                         </a>
@@ -145,20 +142,31 @@
             </div>
         </nav>
 
-        <main id="main" role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4">
+            <div id="loading-div" style="display: none">
+                <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+                    <p id="loading-label" style="font-size: 2em;margin-bottom: 0; font-family: sans-serif bold"></p>
+                    <p style="font-size: 2em;margin-bottom: 0; font-family: sans-serif bold"> &nbsp </p>
+                    <img width="20em"
+                         style="display: block;margin-top: 0; margin-left: 0;margin-right: auto;"
+                         src="/img/loading.gif">
+                </div>
+            </div>
+            <div id="main"></div>
         </main>
 
     </div>
 </div>
+<!-- Custom styles for this template -->
+<link href="/css/dashboard.css" rel="stylesheet">
 
+<script src="/js/jquery.slim.min.js"></script>
+<script>window.jQuery || document.write('<script src="/js/jquery.slim.min.js"><\/script>')</script>
+<script src="/js/bootstrap.bundle.min.js"></script>
 
-<script src="js/jquery.slim.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/jquery.slim.min.js"><\/script>')</script>
-<script src="js/bootstrap.bundle.min.js"></script>
-
-<script src="js/feather.min.js"></script>
-<script src="js/Chart.min.js"></script>
-<script src="js/dashboard.js"></script>
+<script src="/js/feather.min.js"></script>
+<script src="/js/Chart.min.js"></script>
+<script src="/js/dashboard.js"></script>
 <script src="live.js"></script>
 <script src="pvideo.js"></script>
 <script src="settings.js"></script>
