--- a/web/app/live.html
+++ b/web/app/live.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <h1 class="h2">实时画面</h1>
+    <p style="font-size: 2em; margin-bottom:0;font-family: sans-serif bold">直播</p>
     <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
             <button id="saveButton" type="button" disabled="disabled" onclick="saveFrame()"
