主要是前端修改，支持显示fps、支持翻页

--- a/web/app/live.html
+++ b/web/app/live.html
@@ -2,6 +2,11 @@
     <p style="font-size: 2em; margin-bottom:0;font-family: sans-serif bold">直播</p>
     <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
+            <button id="dbgButton" type="button" onclick="debug=!debug;"
+                    class="btn btn-sm btn-outline-secondary">
+                <span data-feather="tool"></span>
+                调试
+            </button>
             <button id="saveButton" type="button" disabled="disabled" onclick="saveFrame()"
                     class="btn btn-sm btn-outline-secondary">
                 <span data-feather="camera"></span>
