先提交一下

--- a/web/app/log.html
+++ b/web/app/log.html
@@ -2,7 +2,7 @@
     <p style="font-size: 2em;margin-bottom: 0;font-family: sans-serif bold">日志</p>
     <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
-            <button id="reboot" type="button" disabled="disabled" onclick=""
+            <button id="fetch" type="button" disabled="disabled" onclick="fetchLog()"
                     class="btn btn-sm btn-outline-secondary">
                 <span data-feather="power"></span>
                 更新
