log看似已经可以了

--- a/web/app/log.html
+++ b/web/app/log.html
@@ -4,7 +4,7 @@
         <div class="btn-group mr-2">
             <button id="fetch" type="button" disabled="disabled" onclick="fetchLog()"
                     class="btn btn-sm btn-outline-secondary">
-                <span data-feather="power"></span>
+                <span data-feather="refresh-cw"></span>
                 更新
             </button>
         </div>
@@ -20,13 +20,7 @@
             <th style="border-top: none">描述</th>
         </tr>
         </thead>
-        <tbody>
-        <tr>
-            <td>警告</td>
-            <td>CAPTURE</td>
-            <td>2021/10/10</td>
-            <td>失火啦！</td>
-        </tr>
+        <tbody id="table-body">
         </tbody>
     </table>
 </div>
