--- a/web/app/settings.html
+++ b/web/app/settings.html
@@ -1,51 +1,17 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-    <p style="font-size: 2em;margin-bottom: 0;font-family: sans-serif bold">控制台</p>
+    <p style="font-size: 2em;margin-bottom: 0;font-family: sans-serif bold">设置</p>
     <div class="btn-toolbar mb-2 mb-md-0">
         <div class="btn-group mr-2">
+            <button id="upload" type="button" disabled="disabled" onclick="uploadConfig()"
+                    class="btn btn-sm btn-outline-dark">
+                上传
+            </button>
             <button id="reboot" type="button" disabled="disabled" onclick="rebootApp()"
-                    class="btn btn-sm btn-outline-secondary">
-                <span data-feather="power"></span>
+                    class="btn btn-sm btn-outline-dark">
                 重启
             </button>
         </div>
     </div>
 </div>
-<div style="display: grid; grid-template-columns: 1fr 1fr;">
-    <div>
-        <p>
-            运行状态
-        </p>
-        <div class="table-responsive">
-            <table class="table table-striped table-sm">
-                <thead>
-                <tr>
-                    <th>等级</th>
-                    <th>组件</th>
-                    <th>时间</th>
-                    <th>描述</th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr>
-                    <td>警告</td>
-                    <td>CAPTURE</td>
-                    <td>2021/10/10</td>
-                    <td>失火啦！</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-    </div>
-    <div>
-        <p>
-            配置文件
-            <button id="upload" type="button" disabled="disabled" onclick=""
-                    class="btn btn-sm btn-outline-dark">
-                上传
-            </button>
-        </p>
-        <textarea id="configtxt" rows="25"
-                  style="width: 100%"></textarea>
-    </div>
-
-</div>
+<textarea id="configtxt" rows="25"
+          style="width: 100%"></textarea>
