修改JS下载文件的方式

--- a/web/app/log.html
+++ b/web/app/log.html
@@ -8,6 +8,13 @@
                 更新
             </button>
         </div>
+        <div class="btn-group mr-2">
+            <button id="downloadBtn" type="button" disabled="disabled" onclick="downloadLogFile()"
+                    class="btn btn-sm btn-outline-secondary">
+                <span data-feather="download"></span>
+                下载
+            </button>
+        </div>
     </div>
 </div>
 <div class="table-responsive">
